Migrate to RFG, no more workarounds